# J7-language

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  Readme.md  file.j7  main.cpp  meson.build  run-main.sh
bazel-use/: MODULE.bazel
bazel-use/utils/: BUILD  Find.cpp
compiler/: BUILD  main.cpp
include/: AST.hpp  BUILD  Lexer.hpp  lexer.hpp
include/utils/: BUILD  Errors.hpp  Find.hpp
lexer/: BUILD  lexer.cpp  lexer.hpp
main/: BUILD  main.cpp
modules/: BUILD  my_hashmap.hpp
src/: Lexer.cpp  lexer.cpp
src/utils/: Errors.cpp  Find.cpp  Trim.cpp
utils/: BUILD  Errors.cpp  Find.hpp  Strings.hpp  Trim.cpp  Trim.hpp  regexp.hpp
